Update for last round of stein releases
Change-Id: I166cd07a2b3701341a7c6f931cdb7a4ca3400d79

--- a/openstack/murano-dashboard/murano-dashboard.spec.j2
+++ b/openstack/murano-dashboard/murano-dashboard.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'murano-dashboard' %}
-{% set upstream_version = upstream_version('6.0.0') %}
+{% set upstream_version = upstream_version('7.0.0.0rc1') %}
 {% set rpm_release = '1' %}
 
 %global sname {{ pypi_name }}
