--- a/openstack/mistral/mistral.spec.j2
+++ b/openstack/mistral/mistral.spec.j2
@@ -1,5 +1,5 @@
 {% set pypi_name = 'mistral' %}
-{% set upstream_version = upstream_version('8.0.0.0b2') %}
+{% set upstream_version = upstream_version('8.0.0.0rc1') %}
 {% set source = url_pypi() %}
 {% set rpm_release = '1' %}
 %if 0%{?rhel} || 0%{?fedora}
